--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-    "rewrites": [{ "source": "/(.*)", "destination": "/public/index.html" }],
+    "rewrites": [{ "source": "/api/(.*)", "destination": "/api/$1" }],
     "headers": [
         {
             "source": "/(.*)",
